# MogVMP

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
aux/tracer/MyPinTool/: MyPinTool.sln  MyPinTool.vcxproj
aux/tracer/MyPinTool/Debug/MyPinTool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyPinTool.lastbuildstate  link.command.1.tlog  link.secondary.1.tlog
other/ida/: vmp_junk_remover.py
other/tracer/MyPinTool/: MyPinTool.cpp
other/tracer/MyPinTool/Debug/: MyPinTool.dll.recipe  MyPinTool.exp  MyPinTool.lib  MyPinTool.vcxproj.FileListAbsolute.txt
other/tracer/MyPinTool/Debug/MyPinTool.tlog/: Cl.items.tlog  link.read.1.tlog
src/: handler_discovery.cpp  handler_discovery.h  instruction_decoder.cpp  instruction_decoder.h  llvm_pipeline_utils.h  main.cpp  peload.cpp  peload.h  vmp_lifter.cpp  vmp_lifter.h
src/passes/: concrete_alloca_prop.cpp  concrete_alloca_prop.h  readable_block_names.cpp  readable_block_names.h  readable_register_names.cpp  readable_register_names.h  strip_rdtsc_sideeffects.cpp  strip_rdtsc_sideeffects.h
tests/: lifter_golden_test.cpp
